<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="@dimen/default_margin"
	tools:context=".MainActivity"
	>

	<ImageView
	    android:layout_margin="5dp"
	    android:layout_width="300sp"
	    android:layout_height="300sp"
	    android:layout_marginBottom="@dimen/double_margin"
		android:src="@drawable/welcome"
		/>

	<Button
		android:id="@+id/start_button_start"
		android:background="@drawable/button_blue"
		android:layout_height="wrap_content"
		android:layout_width="300sp"
		android:layout_margin="5sp"
		android:text="@string/main_button_start"
		style="@style/ButtonTextMain"
		/>

	<Button
		android:id="@+id/start_button_config"
		android:background="@drawable/button_blue"
		android:layout_height="wrap_content"
		android:layout_width="300sp"
		android:layout_margin="5sp"
		android:text="@string/main_button_config"
		style="@style/ButtonTextMain"
		/>

	<Button
		android:id="@+id/start_button_exit"
		android:background="@drawable/button_red"
		android:layout_height="wrap_content"
		android:layout_width="300sp"
		android:layout_margin="5sp"
		android:text="@string/main_button_exit"
		style="@style/ButtonTextMain"
		/>

</LinearLayout>
